# spooklight

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  VISION.md  docker-compose.yml  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: python-app.yml
assets/css/: app.css
docker/: web-entrypoint.sh  worker-entrypoint.sh
docs/: architecture.md  async-ai-tasks.md  index.md  operations.md  ui-implementation.md
old_prompts/: describe_image.prompt.md  generate_concluding_narrative.prompt.md  generate_first_image_description.prompt.md  generate_next_image_description.prompt.md  generate_title_from_narrative.prompt.md  generate_visual_style_from_image_description.prompt.md  narrative_has_reached_natural_conclusion.prompt.md
src/: manage.py
src/ai_tasks/: admin.py  apps.py  models.py  services.py  tasks.py  worker.py
src/ai_tasks/management/commands/: check_ai_worker_health.py  recover_ai_tasks.py  run_ai_worker.py
src/ai_tasks/migrations/: 0001_initial.py
src/core/: urls.py  views.py
src/core/templates/core/: base.html  dashboard.html  landing.html
src/spooklight/: asgi.py  cli.py  describe_image.py  enhance_story_concept.prompt.md  generate_image_from_description.py  generate_step.py  generate_story.py  generate_story_concept_from_image_description.prompt.md  initialize_story.py  main.py  model.py  settings.py  urls.py  wsgi.py
src/spooklight/completion/: build_pdf_from_story_files.py  finalize_story.py  generate_title_from_narrative.prompt.md  generate_title_from_narrative.py  narrative_has_reached_natural_conclusion.prompt.md  story_finished.py
src/spooklight/gui/: app.py
src/spooklight/imageprocessing/: describe_image.prompt.md  describe_image.py  describe_visual_style.prompt.md  generate_image_from_description.py  generate_visual_style_from_image_description.prompt.md  generate_visual_style_from_image_description.py  reencode_image.py
src/spooklight/initialization/: enhance_story_concept.prompt.md  enhance_story_concept.py  generate_story_concept_from_image_description.prompt.md  generate_story_concept_from_image_description.py  initialize_story.py
src/spooklight/stepgeneration/: generate_concluding_narrative.py  generate_first_image_description.prompt.md  generate_first_image_description.py  generate_first_narrative.prompt.md  generate_first_narrative.py  generate_first_step.py  generate_next_image_description.prompt.md  generate_next_image_description.py  generate_next_narrative.prompt.md  generate_next_narrative.py  generate_step.py  save_step_files.py  select_random_purpose.py
src/world_artifacts/: admin.py  apps.py  forms.py  models.py  tabs.py  urls.py  views.py
src/world_artifacts/migrations/: 0001_initial.py
src/world_artifacts/templates/world_artifacts/: artifact_form.html
src/worlds/: admin.py  apps.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
src/worlds/migrations/: 0001_initial.py  0002_worldcoverimage_ai_task_and_more.py
src/worlds/templates/worlds/: world_detail.html  world_form.html
src/worlds/templates/worlds/partials/: artifact_tabs.html  cover_status.html
tests/: test_ai_tasks.py  test_smoke.py  test_world_artifacts.py  test_worlds.py
