[project]
name = "spooklight"
version = "0.1.0"
description = "Spooklight Django application"
authors = [
    {name = "B.T. Franklin", email = "brandon.franklin@gmail.com"},
]
dependencies = [
    "Django>=6.0.1",
    "openai>=2.36.0",
    "psycopg[binary]>=3.3.4",
]
requires-python = ">=3.13"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/btfranklin/spooklight"
Issues = "https://github.com/btfranklin/spooklight/issues"
Changelog = "https://github.com/btfranklin/spooklight/releases"
Repository = "https://github.com/btfranklin/spooklight.git"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "djlint>=1.36.4",
    "ruff>=0.14.13",
]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "spooklight.settings"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"
excludes = ["tests/**"]

[tool.pdm.scripts]
test = "pytest"
lint = {shell = "ruff check src tests && djlint src --profile=django --lint --check"}
dev = "python src/manage.py runserver"
reformat-templates = "djlint src --profile=django --reformat"
